--- a/.github/workflows/docker-image-ci.yaml
+++ b/.github/workflows/docker-image-ci.yaml
@@ -16,5 +16,5 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build the Docker image
         run: docker build . --file dockerfile-client --tag "ulyhmyges/client-ci"
-      - name: Push on Docker Hub
-        run: docker push "ulyhmyges/client-ci"
+      #- name: Push on Docker Hub
+      #  run: docker push "ulyhmyges/client-ci"
