--- a/.github/workflows/docker-image-ci.yaml
+++ b/.github/workflows/docker-image-ci.yaml
@@ -16,5 +16,14 @@ jobs:
       - uses: actions/checkout@v3
       - name: Build the Docker image
         run: docker build . --file dockerfile-client --tag "ulyhmyges/client-ci"
-      #- name: Push on Docker Hub
-      #  run: docker push "ulyhmyges/client-ci"
+      - name: Docker Login
+      # You may pin to the exact commit or the version.
+      # uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
+        uses: docker/login-action@v3.0.0
+        with:
+          # Username used to log against the Docker registry
+          username: ${{ secrets.DOCKER_USERNAME }}
+          # Password or personal access token used to log against the Docker registry
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push on Docker Hub
+        run: docker push "ulyhmyges/client-ci"
