--- a/.github/workflows/docker-image-ci.yaml
+++ b/.github/workflows/docker-image-ci.yaml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the Docker image
-        run: docker build . --file dockerfile-client --tag "ulyhmyges/client-ci"
+        run: docker build . --file dockerfile-client --tag "ulyhmyges/client-ci:v1"
       - name: Docker Login
       # You may pin to the exact commit or the version.
       # uses: docker/login-action@343f7c4344506bcbf9b4de18042ae17996df046d
@@ -26,4 +26,4 @@ jobs:
           # Password or personal access token used to log against the Docker registry
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push on Docker Hub
-        run: docker push "ulyhmyges/client-ci"
+        run: docker push "ulyhmyges/client-ci:v1"
