--- a/.github/workflows/docker-image-ci.yaml
+++ b/.github/workflows/docker-image-ci.yaml
@@ -39,9 +39,9 @@ jobs:
 
           # Content Type
           contentType: 'application/json'
-          
+
           # Request Body as JSON String
-          data: { type: 'newImage', data: 'Hello world from docker hub image'}
+          data: { 'type': 'newImage', 'data': 'Hello world from docker hub image'}
 
 
 
