runs-on: ubuntu-latest

--- a/.github/workflows/docker-image-ci.yaml
+++ b/.github/workflows/docker-image-ci.yaml
@@ -10,7 +10,7 @@ jobs:
 
   build-docker-image:
 
-    runs-on: macos-latest-xlarge
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
