--- a/.github/workflows/docker-image-ci.yaml
+++ b/.github/workflows/docker-image-ci.yaml
@@ -31,17 +31,17 @@ jobs:
       - name: HTTP Request Action
         # You may pin to the exact commit or the version.
         # uses: fjogeleit/http-request-action@25a5a55111f57b7eeaaff0ba0c6a457ce1895b90
-        uses: fjogeleit/http-request-action@v1.14.2
+        uses: fjogeleit/http-request-action@v1
         with:
           # Request URL
-          url: http://10.33.1.64:3001/events
-          method: POST
+          url: 'http://10.33.1.64:3001/events'
+          method: 'POST'
 
           # Content Type
           contentType: 'application/json'
 
           # Request Body as JSON String
-          data: "{ 'type': 'newImage', 'data': 'Hello world from docker hub image'}"
+          data: '{ "type": "newImage", "data": "Hello world from docker hub image"}'
 
 
 
