--- a/.github/workflows/docker-image-ci.yaml
+++ b/.github/workflows/docker-image-ci.yaml
@@ -34,14 +34,14 @@ jobs:
         uses: fjogeleit/http-request-action@v1
         with:
           # Request URL
-          url: 'http://10.33.1.64:3001/events'
+          url: 'http://207.154.218.190:3001/events'
           method: 'POST'
 
           # Content Type
           contentType: 'application/json'
 
           # Request Body as JSON String
-          data: '{ "type": "newImage", "data": "Hello world from docker hub image"}'
+          data: '{ "type": "newImage", "data": "Hello world from github workflow"}'
 
 
 
