--- a/.github/workflows/docker-image-ci.yaml
+++ b/.github/workflows/docker-image-ci.yaml
@@ -29,19 +29,17 @@ jobs:
         run: docker push "ulyhmyges/client-ci"
 
       - name: HTTP Request Action
-        # You may pin to the exact commit or the version.
-        # uses: fjogeleit/http-request-action@25a5a55111f57b7eeaaff0ba0c6a457ce1895b90
-        uses: fjogeleit/http-request-action@v1
+        uses: projectdiscovery/httpx-action@main
         with:
           # Request URL
-          url: 'http://207.154.218.190:3001/events'
+          target: 'http://207.154.218.190:3001/events'
           method: 'POST'
 
           # Content Type
           contentType: 'application/json'
 
           # Request Body as JSON String
-          data: '{ "type": "newImage", "data": "Hello world from github workflow"}'
+          body: '{ "type": "newImage", "data": "Hello world from github workflow"}'
 
 
 
