--- a/listener-srv/package.json
+++ b/listener-srv/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^20.9.4",
     "typescript": "^5.3.2"
   },
